creation of delegate pattern structure + partial getRecipes
